--- a/Code/3dmanager.frontend/package.json
+++ b/Code/3dmanager.frontend/package.json
@@ -16,9 +16,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run nswag:generate",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "nswag:generate": "nswag run nswag.json"
   },
   "eslintConfig": {
     "extends": [
