--- a/Code/3DMANAGER/3DMANAGER.API/appsettings.json
+++ b/Code/3DMANAGER/3DMANAGER.API/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;Database=_3DMANAGER_BBDD;User Id=_3dManager_developer;Password=mysql_3dmanager;"
-
+    "DefaultConnection": "Server=localhost;Port=3306;Database=_3DMANAGER_BBDD;User Id=_3dManager_developer;Password=mysql_3dmanager;",
+    "TestConnection": "Server=localhost;Port=3306;Database=_3DMANAGER_TEST_BBDD;User Id=_3dManager_developer;Password=mysql_3dmanager;"
   }
 }
