--- a/Code/3DMANAGER/3DMANAGER.TEST/3DMANAGER.TEST.csproj
+++ b/Code/3DMANAGER/3DMANAGER.TEST/3DMANAGER.TEST.csproj
@@ -8,11 +8,13 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <UserSecretsId>dff1d8b9-e2fe-4e3f-a750-e83b1f56f051</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="15.0.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="MySql.Data" Version="9.4.0" />
