--- a/Code/3DMANAGER-APP/3dmanager-app.client/package.json
+++ b/Code/3DMANAGER-APP/3dmanager-app.client/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage"
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:ci-basic": "vitest run --environment jsdom src/test/unitary/"
   },
   "dependencies": {
     "axios": "^1.12.2",
@@ -28,6 +31,7 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
