--- a/.github/workflows/ci-basic.yml
+++ b/.github/workflows/ci-basic.yml
@@ -4,59 +4,71 @@ on:
   push:
     branches:
       - 'feature/*'
-  pull_request:
-    branches:
-      - develop
+  workflow_dispatch:
 
 jobs:
-  server:
-    name: Server (.NET build + unitary test)
+  build-and-test-server:
+    name: Build and Test 
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: .Code/3DMANAGER-APP/3DMANAGER-APP.Server
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Install .NET
-        uses: actions/setup-dotnet@v4
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '8.0.x'
 
-      - name: Restore dependencies
-        run: dotnet restore
+      - name: Restore Server project
+        run: dotnet restore Code/3DMANAGER-APP/3DMANAGER-APP.Server/3DMANAGER-APP.Server.csproj
 
-      - name: Compile
-        run: dotnet build --no-restore --configuration Release
+      - name: Build Server project
+        run: dotnet build Code/3DMANAGER-APP/3DMANAGER-APP.Server/3DMANAGER-APP.Server.csproj --no-restore --configuration Release
 
-      - name: Execute unitary test
-        run: dotnet test --no-build --configuration Release --verbosity normal
+      - name: Restore Test project
+        run: dotnet restore Code/3DMANAGER-APP/3DMANAGER-APP.TEST/3DMANAGER-APP.TEST.csproj
 
-  client:
-    name: Client (React build + unitary test)
+      - name: Build Test project
+        run: dotnet build Code/3DMANAGER-APP/3DMANAGER-APP.TEST/3DMANAGER-APP.TEST.csproj --no-restore --configuration Release
+
+      - name: Run unitary tests 
+        run: dotnet test Code/3DMANAGER-APP/3DMANAGER-APP.TEST/3DMANAGER-APP.TEST.csproj --no-build --configuration Release --filter "Category=Unitary"
+
+  build-and-test-client:
+    name: Build y Test del Cliente
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: ./Code/3DMANAGER-APP/3dmanager-app.client
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Configure Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: '20'
+
+      - name: Cache node modules
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Install dependencies
         run: npm ci
+        working-directory: Code/3DMANAGER-APP/3dmanager-app.client
 
-      - name: Compile 
-        run: npm run build
+      - name: Clean Vitest cache
+        run: rm -rf .vitest
+        
+      - name: Debug and run unit tests (Vitest)
+        working-directory: Code/3DMANAGER-APP/3dmanager-app.client
+        run: npm run test:ci-basic
 
-      - name: Execute unitary tests  (Vitest)
-        run: npm run test -- --run
+      - name: Build client
+        run: npm run build --if-present
+        working-directory: Code/3DMANAGER-APP/3dmanager-app.client
+
+
