--- a/Code/3DMANAGER-APP/3dmanager-app.client/package.json
+++ b/Code/3DMANAGER-APP/3dmanager-app.client/package.json
@@ -7,13 +7,14 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
+    "preview": "vite preview --port 3000",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:coverage": "vitest run --coverage",
-    "test:ci-basic": "vitest run --environment jsdom src/test/unitary/"
+    "test:ci-basic": "vitest run --environment jsdom src/test/unitary/",
+    "test:integration": "vitest run --environment jsdom src/test/integration/"
   },
   "dependencies": {
     "axios": "^1.12.2",
