--- a/Code/.gitignore
+++ b/Code/.gitignore
@@ -7,7 +7,6 @@ obj/
 *.userosscache
 *.sln.docstates
 *.vs/
-project.lock.json
 project.fragment.lock.json
 artifacts/
 *.dll
@@ -38,8 +37,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Dependencias lock (opcional: elimínalo si quieres fijar versiones exactas)
-package-lock.json
 
 # Archivos de entorno
 *.env
@@ -69,6 +66,6 @@ desktop.ini
 *.tar
 *.gz
 
-# Nota: si quieres scripts de base de datos compartidos,
-# guárdalos en /scripts-db/ y elimina esa carpeta de aquí.
 ```
+### --- Test ---
+playwright-report/
