--- a/Code/3DMANAGER-APP/3dmanager-app.client/package.json
+++ b/Code/3DMANAGER-APP/3dmanager-app.client/package.json
@@ -13,7 +13,7 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:coverage": "vitest run --coverage",
-    "test:ci-basic": "vitest run --environment jsdom src/test/unitary/",
+    "test:ci-basic": "vitest run --environment jsdom src/test/unitary/"
   },
   "dependencies": {
     "axios": "^1.12.2",
