Added models, services, components, and general functionality for login.

--- a/Code/3DMANAGER-APP/3DMANAGER-APP.Server/appsettings.json
+++ b/Code/3DMANAGER-APP/3DMANAGER-APP.Server/appsettings.json
@@ -9,5 +9,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "yarifo%e15sCNvUHSLSaAnHS$HDS^DVy",
+    "Issuer": "3DMANAGER"
+  }
 }
