Funcionality and layout for groups

--- a/Code/3DMANAGER-APP/3DMANAGER-APP.DAL/3DMANAGER-APP.DAL.csproj
+++ b/Code/3DMANAGER-APP/3DMANAGER-APP.DAL/3DMANAGER-APP.DAL.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Managers\GroupDbManager.cs" />
     <None Include="Managers\UserDbManager.cs" />
   </ItemGroup>
 
