--- a/Code/3DMANAGER-APP/3DMANAGER-APP.DAL/3DMANAGER-APP.DAL.csproj
+++ b/Code/3DMANAGER-APP/3DMANAGER-APP.DAL/3DMANAGER-APP.DAL.csproj
@@ -8,7 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<None Include="Managers\PrintDbManager.cs" />
+	<None Include="Managers\FilamentDbManager.cs" />
     <None Include="Managers\GroupDbManager.cs" />
+    <None Include="Managers\FilamentDbManager.cs" />
     <None Include="Managers\UserDbManager.cs" />
   </ItemGroup>
 
