Implemented catalog functionality in the forms to add new inventory via the dashboard.

--- a/Code/3DMANAGER-APP/3DMANAGER-APP.DAL/3DMANAGER-APP.DAL.csproj
+++ b/Code/3DMANAGER-APP/3DMANAGER-APP.DAL/3DMANAGER-APP.DAL.csproj
@@ -7,7 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+
   <ItemGroup>
+	<None Include="Managers\CatalogDbManager.cs" />
 	<None Include="Managers\PrintDbManager.cs" />
 	<None Include="Managers\FilamentDbManager.cs" />
     <None Include="Managers\GroupDbManager.cs" />
