--- a/.github/workflows/ci-full.yml
+++ b/.github/workflows/ci-full.yml
@@ -20,7 +20,9 @@ jobs:
         run: docker run -d --name mysql-ci -e MYSQL_ROOT_PASSWORD=password -e MYSQL_DATABASE=3dmanagerCI -p 3307:3306 mysql:8.0   
       
       - name: Wait for MySQL docker
-        run: until docker exec mysql-ci mysqladmin ping -h "127.0.0.1" --silent; do sleep 2 done
+        run: until docker exec mysql-ci mysqladmin ping -h "127.0.0.1" --silent; do 
+               sleep 2
+             done
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
