--- a/.github/workflows/ci-full.yml
+++ b/.github/workflows/ci-full.yml
@@ -85,7 +85,7 @@ jobs:
         run: sleep 5
         
       - name: Wait for API
-        run: npx wait-on http://localhost:5000/health --timeout 60000
+        run: npx wait-on http-get://localhost:5000/health --timeout 60000
 
       - name: Print API log on failure
         if: failure()
