--- a/.github/workflows/ci-full.yml
+++ b/.github/workflows/ci-full.yml
@@ -125,7 +125,7 @@ jobs:
         run: npm run dev -- --port 3001 &
         working-directory: Code/3DMANAGER-APP/3dmanager-app.client
         env:
-          ASPNETCORE_ENVIRONMENT: CI
+          VITE_CI: "true"
 
       - name: Wait for frontend
         run: npx wait-on http://localhost:3001
