--- a/Code/3DMANAGER-APP/3DMANAGER-APP.TEST/3DMANAGER-APP.TEST.csproj
+++ b/Code/3DMANAGER-APP/3DMANAGER-APP.TEST/3DMANAGER-APP.TEST.csproj
@@ -21,7 +21,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
-    <PackageReference Include="MySql.Data" Version="9.4.0" />
+    <PackageReference Include="MySql.Data" Version="9.5.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
   </ItemGroup>
@@ -29,6 +29,7 @@
   <ItemGroup>
     <ProjectReference Include="..\3DMANAGER-APP.BLL\3DMANAGER-APP.BLL.csproj" />
     <ProjectReference Include="..\3DMANAGER-APP.Server\3DMANAGER-APP.Server.csproj" />
+    <ProjectReference Include="..\TestingSupport\3DMANAGER-APP.TestingSupport.csproj" />
   </ItemGroup>
 
   <ItemGroup>
