--- a/.github/workflows/ci-full.yml
+++ b/.github/workflows/ci-full.yml
@@ -137,7 +137,8 @@ jobs:
       - name: Run E2E tests
         run: npx playwright test
         working-directory: Code/3DMANAGER-APP/3dmanager-app.client
-
+        env:
+          CI: "true"
  
 
       
