--- a/.github/workflows/ci-full.yml
+++ b/.github/workflows/ci-full.yml
@@ -16,6 +16,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Start MySQL BBDD docker
+        run: docker run -d --name mysql-ci -e MYSQL_ROOT_PASSWORD=password -e MYSQL_DATABASE=3dmanagerCI -p 3307:3306 mysql:8.0   
+      
+      - name: Wait for MySQL docker
+        run: until docker exec mysql-ci mysqladmin ping -h "127.0.0.1" --silent; do sleep 2; done
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
@@ -36,6 +42,7 @@ jobs:
       - name: Run full test suite (.NET)
         env:
           ASPNETCORE_ENVIRONMENT: CI
+          ConnectionStrings__TestConnection: "Server=localhost;Port=3307;Database=3dmanagerCI;User=root;Password=password;"
         run: dotnet test Code/3DMANAGER-APP/3DMANAGER-APP.TEST/3DMANAGER-APP.TEST.csproj --no-build --configuration Release
         
 
@@ -43,9 +50,54 @@ jobs:
     name: Build and Test client
     runs-on: ubuntu-latest
 
+    env:
+      ASPNETCORE_ENVIRONMENT: CI
+      ConnectionStrings__DefaultConnection: "Server=localhost;Port=3307;Database=3dmanagerCI;User=root;Password=password;"
+
     steps:
       - uses: actions/checkout@v3
 
+      - name: Start MySQL BBDD docker
+        run: docker run -d --name mysql-ci -e MYSQL_ROOT_PASSWORD=password -e MYSQL_DATABASE=3dmanagerCI -p 3307:3306 mysql:8.0   
+      
+      - name: Wait for MySQL docker
+        run: until docker exec mysql-ci mysqladmin ping -h "127.0.0.1" --silent; do sleep 2; done
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '8.0.x'
+          
+      - name: Restore Server project
+        run: dotnet restore Code/3DMANAGER-APP/3DMANAGER-APP.Server/3DMANAGER-APP.Server.csproj
+
+      - name: Build Server project
+        run: dotnet build Code/3DMANAGER-APP/3DMANAGER-APP.Server/3DMANAGER-APP.Server.csproj --no-restore --configuration Release
+        
+      - name: Run API (CI)
+        run: |
+          dotnet run \
+          --no-launch-profile \
+          --project Code/3DMANAGER-APP/3DMANAGER-APP.Server/3DMANAGER-APP.Server.csproj \
+          --urls http://localhost:5000 \
+          > api.log 2>&1 &
+        env:
+          ASPNETCORE_ENVIRONMENT: CI
+          ConnectionStrings__DefaultConnection: "Server=localhost;Port=3307;Database=3dmanagerCI;User=root;Password=password;"
+          
+      - name: Sleep for API startup
+        run: sleep 5
+        
+      - name: Wait for API
+        run: npx wait-on http-get://localhost:5000/health --timeout 60000
+          
+      - name: Print API log on failure
+        if: failure()
+        run: |
+          echo "========== API LOG =========="
+          cat api.log || echo "api.log not found"
+          echo "============================="
+          
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
@@ -72,28 +124,24 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
         working-directory: Code/3DMANAGER-APP/3dmanager-app.client
-        
-      #- name: Start backend server
-      #  run: dotnet run --project Code/3DMANAGER-APP/3DMANAGER-APP.Server/3DMANAGER-APP.Server.csproj --urls "http://localhost:5000" &
-      #  env:
-      #    ASPNETCORE_ENVIRONMENT: CI
-          
-      #- name: Wait for backend
-      #  run: npx wait-on http://localhost:5000/health
 
       - name: Start frontend
         run: npm run dev -- --port 3001 &
         working-directory: Code/3DMANAGER-APP/3dmanager-app.client
         env:
-          ASPNETCORE_ENVIRONMENT: CI
-
+          VITE_CI: "true"
+      - name: Print sample data
+        run: |
+          echo "Users:"
+          curl -s http://localhost:5000/api/v1/users | head -n 20
       - name: Wait for frontend
         run: npx wait-on http://localhost:3001
 
-      - name: Run E2E tests
-        run: npx playwright test
-        working-directory: Code/3DMANAGER-APP/3dmanager-app.client
-
+      #- name: Run E2E tests
+       # run: npx playwright test
+        #working-directory: Code/3DMANAGER-APP/3dmanager-app.client
+        #env:
+         # CI: "true"
  
 
       
