First Version of S3 integration for images

--- a/Code/3DMANAGER-APP/3DMANAGER-APP.Server/appsettings.json
+++ b/Code/3DMANAGER-APP/3DMANAGER-APP.Server/appsettings.json
@@ -13,5 +13,11 @@
   "Jwt": {
     "Key": "yarifo%e15sCNvUHSLSaAnHS$HDS^DVy",
     "Issuer": "3DMANAGER"
+  },
+  "AWS": {
+    "Region": "eu-west-1",
+    "BucketName": "3dmanager-images",
+    "AccessKey": "xxxx",
+    "SecretKey": ""
   }
 }
