The latest changes are added to incorporate the S3 image upload service, tested for inserting and retrieving images for the printers.

--- a/Code/3DMANAGER-APP/3DMANAGER-APP.Server/appsettings.json
+++ b/Code/3DMANAGER-APP/3DMANAGER-APP.Server/appsettings.json
@@ -17,7 +17,7 @@
   "AWS": {
     "Region": "eu-west-1",
     "BucketName": "3dmanager-images",
-    "AccessKey": "xxxx",
+    "AccessKey": "",
     "SecretKey": ""
   }
 }
