--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -39,6 +39,6 @@ services:
       start_period: 20s
     volumes:
       - db_data:/var/lib/mysql
-
+      - ./init:/docker-entrypoint-initdb.d
 volumes:
   db_data:
