--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,15 @@
 # BUILD
+# Frontend build
+FROM node:20 AS frontend-build
+WORKDIR /app 
 
-# Use .NET SDK image
+COPY ../Code/3DMANAGER-APP/3dmanager-app.client/package*.json ./ 
+RUN npm install 
+
+COPY ../Code/3DMANAGER-APP/3dmanager-app.client/ ./ 
+RUN npm run build
+
+# Backend build with .NET SDK image
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
@@ -10,24 +19,16 @@ COPY ../Code/3DMANAGER-APP/3DMANAGER-APP.Server/3DMANAGER-APP.Server.csproj ./3D
 COPY ../Code/3DMANAGER-APP/3DMANAGER-APP.BLL/3DMANAGER-APP.BLL.csproj ./3DMANAGER-APP.BLL/ 
 COPY ../Code/3DMANAGER-APP/3DMANAGER-APP.DAL/3DMANAGER-APP.DAL.csproj ./3DMANAGER-APP.DAL/ 
 COPY ../Code/3DMANAGER-APP/3dmanager-app.client/3dmanager-app.client.esproj ./3dmanager-app.client/
-
+COPY ../Code/3DMANAGER-APP/3DMANAGER-APP.TEST/3DMANAGER-APP.TEST.csproj ./3DMANAGER-APP.TEST/ 
+COPY ../Code/3DMANAGER-APP/TestingSupport/3DMANAGER-APP.TestingSupport.csproj ./TestingSupport/ 
 # Restore dependencies
 RUN dotnet restore 3DMANAGER-APP.sln
 
 COPY ../Code/3DMANAGER-APP/ ./
 
-# Build React frontend
-WORKDIR /src/3dmanager-app.client 
-RUN npm install 
-RUN npm run build
-
 # Publish backend
 WORKDIR /src/3DMANAGER-APP.Server 
 RUN dotnet publish -c Release -o /app/publish
-
-# Serve frontend static files from the backend
-RUN mkdir -p /app/publish/wwwroot 
-RUN cp -r /src/3dmanager-app.client/build/* /app/publish/wwwroot/
 
 # RUNTIME
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final 
@@ -41,6 +42,9 @@ ENV ASPNETCORE_URLS=https://+:443
 ENV ASPNETCORE_ENVIRONMENT=Production
 
 COPY --from=build /app/publish ./
+
+RUN mkdir -p /app/wwwroot 
+COPY --from=frontend-build /app/dist /app/wwwroot
 
 # Health check
 HEALTHCHECK --interval=10s --timeout=3s --retries=5 \
