--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   app:
+    container_name: 3dmanager-app
     build: 
       context: .. 
       dockerfile: docker/Dockerfile
@@ -16,7 +17,10 @@ services:
       AWS__Region: ${AWS_REGION} 
       AWS__BucketName: ${AWS_BUCKET} 
       AWS__AccessKey: ${AWS_ACCESS_KEY} 
-      AWS__SecretKey: ${AWS_SECRET_KEY}    
+      AWS__SecretKey: ${AWS_SECRET_KEY}   
+      ASPNETCORE_Kestrel__Certificates__Default__Password: ${CERT_PASSWORD}
+      AUTOMAPPER__LICENSE: "${AUTOMAPPER__LICENSE}"
+ 
     ports: 
       - "443:443"
     healthcheck:
