--- a/.github/workflows/cd-build-and-push.yml
+++ b/.github/workflows/cd-build-and-push.yml
@@ -20,7 +20,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
+        
+      - name: Debug secrets 
+        run: | 
+          echo "Username: ${{ secrets.DOCKERHUB_USERNAME }}" 
+          echo "Token length: ${#DOCKERHUB_TOKEN}"
       - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
