Inherit secrets in CD workflow for dev build

--- a/.github/workflows/cd-dev-build.yml
+++ b/.github/workflows/cd-dev-build.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   call-reusable:
     uses: ./.github/workflows/cd-build-and-push.yml
+    secrets: inherit
     with:
       tag: dev
       isLatest: false
