--- a/.github/workflows/cd-release-build.yml
+++ b/.github/workflows/cd-release-build.yml
@@ -21,6 +21,7 @@ jobs:
 
       - name: Call reusable workflow
         uses: ./.github/workflows/cd-build-and-push.yml
+        secrets: inherit
         with:
           tag: ${{ github.event.release.tag_name }}
           isLatest: true
