--- a/.github/workflows/cd-build-and-push.yml
+++ b/.github/workflows/cd-build-and-push.yml
@@ -10,7 +10,7 @@ on:
         required: true
         type: boolean
       composeTag:
-        required: false
+        required: true
         type: string
 
 jobs:
@@ -20,11 +20,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        
-      - name: Debug secrets 
-        run: | 
-          echo "Username: ${{ secrets.DOCKERHUB_USERNAME }}" 
-          echo "Token length: ${#DOCKERHUB_TOKEN}"
+
       - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
@@ -52,6 +48,16 @@ jobs:
         if: ${{ inputs.isLatest == true }}
         run: docker push ${{ secrets.DOCKERHUB_REPOSITORY }}:latest
         
+      - name: Build DB Image 
+        run: |
+          docker build \
+            -f docker/Dockerfile.db \
+            -t ivicenter2018/3dmanager-db:${{ inputs.tag }} \
+            .
+
+      - name: Push DB Image 
+        run: docker push ivicenter2018/3dmanager-db:${{ inputs.tag }}
+
       - name: Setup ORAS CLI
         uses: oras-project/setup-oras@v1
 
@@ -66,7 +72,7 @@ jobs:
       - name: Push docker-compose as OCI artifact
         env:
           REGISTRY: registry-1.docker.io
-          COMPOSE_REPO: ivicenter2018/3dmanager-app
+          COMPOSE_REPO: ivicenter2018/3dmanager-app-compose
           TAG: ${{ inputs.composeTag }}
         run: |
           oras push "${REGISTRY}/${COMPOSE_REPO}:${TAG}" \
