--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   app:
     container_name: 3dmanager-app
-    image: ivicenter2018/3dmanager-app:v0.1
+    image: ivicenter2018/3dmanager-app:0.1
     command: ["dotnet", "3dmanager-app.dll"]
     depends_on:
       db:
@@ -29,7 +29,7 @@ services:
       start_period: 20s
 
   db:
-    image: ivicenter2018/3dmanager-db:v0.1
+    image: ivicenter2018/3dmanager-db:0.1
     environment:
       MYSQL_ROOT_PASSWORD: "3dmanagerpass"
       MYSQL_DATABASE: "3dmanager"
